--- a/mahasiswa/style/sidebar.css
+++ b/mahasiswa/style/sidebar.css
@@ -12,6 +12,8 @@
   margin-top: 12vh;
 }
 
+
+
 body {
   margin: 0;
 }
@@ -181,6 +183,7 @@ sks {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* margin-left:1000px; */
 }
 
 .edit img {
