--- a/admin/style/style.css
+++ b/admin/style/style.css
@@ -107,3 +107,19 @@
   text-align:center;
 }
 
+table {
+  /* position: fixed; */
+  top: 150px;
+  bottom: 0;
+  right: 0px;
+  left: 220px;
+  border-collapse: collapse;
+  width: 50%;
+  border: 1px solid#35A9DB;
+  
+}
+table thead {
+  background: #35A9DB !important;
+  color: #fff;
+  font-weight: normal;
+}
